--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
 	"autoload" : {
 		"psr-4" : {
 			"LSYS\\" : "src/classes/LSYS/"
-		}
+		},
+		"files" : [
+			"src/Bootstarp.php"
+		]
 	},
 	"require" : {
 		"lsys/core" : "~2.1.0"
